[package]
name = "tauri-jisuanqi"
version = "0.1.0"
description = "A Tauri App"
authors = ["weiwei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_jisuanqi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# 优化等级为 z 会更专注于大小而非速度
#Use `3` if you prefer speed
opt-level = 3
# 移除调试信息
debug = false
# 省略不常用的符号
lto = true        # 启用链式时间优化 (Link-Time Optimization)
codegen-units = 1 # 减少代码生成单位数
panic = "abort"   # 减小错误处理部分的大小
